[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/bit_font_6.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/bit_font_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/game_messenger.gd" type="Script" id=3]
[ext_resource path="res://assets/466133__humanoide9000__victory-fanfare.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/505426__humanoide9000__superhero-fanfare.wav" type="AudioStream" id=5]

[node name="GameMessenger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 70.0
margin_right = 270.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "TEAM 1 WINS RD 1. NEXT IN"
align = 1
valign = 1
uppercase = true

[node name="BigCountdown" type="Label" parent="."]
margin_left = 40.0
margin_top = 90.0
margin_right = 270.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
text = "5"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallLabel" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_right = 270.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )
text = "ROUND 1 STARTS IN"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallCountdown" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 9.0
margin_right = 270.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "5"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundWinAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="MatchWinAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.3416
margin_top = -49.9977
margin_right = 35.6584
margin_bottom = -28.9977
custom_fonts/font = ExtResource( 2 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
